--- a/index.ipynb
+++ b/index.ipynb
@@ -538,7 +538,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "high_rating(frontier_restaura)"
+   ]
   },
   {
    "cell_type": "markdown",
